--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,8 +6,11 @@ $danger: #d62246ff;
 $success: #23ce6bff;
 
 // SIZES
-$small: 728px;
-$mediumDesktop: 900px;
+$small: 425px;
+$medium: 768px;
+$large: 1200px;
+$x-large: 1440px;
+$xx-large: 2560px;
 
 html,
 body {
