--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,6 +8,7 @@ $success: #23ce6bff;
 // SIZES
 $small: 425px;
 $medium: 768px;
+$m-large: 900px;
 $large: 1200px;
 $x-large: 1440px;
 $xx-large: 2560px;
